--- a/Supp mat.Rmd
+++ b/Supp mat.Rmd
@@ -1,12 +1,53 @@
 ---
 output:
-  pdf_document: default
   html_document: default
+  pdf_document: default
   word_document: default
 ---
 
-```{r setup, include=FALSE}
+```{r setup, include=FALSE, echo = FALSE,}
 knitr::opts_chunk$set(echo = TRUE)
+
+library(raster)
+library(foreach)
+library(doParallel)
+library(uuid)
+library(here)
+library(tidyverse)
+library(prioritizr)
+pkg_list <- c("raster", "prioritizr", "marxan", "uuid",  "here", "tidyverse")
+select <- dplyr::select
+walk(list.files("R", full.names = TRUE), source)
+prioritizr_timed <- add_timer(prioritizr::solve)
+
+
+# Post-processing
+runs_long <- read_csv(here("output", "ilp-comparison-runs.csv"))
+
+
+runs_complete <- runs_long %>% filter(run_id <200)
+(time_sum <- runs_complete %>% group_by(solver) %>% summarise(min_t = min(time),
+                                                              mean_t = mean(time),
+                                                              max_t = max(time)))
+
+
+rr <- runs_complete %>% filter(solver == "marxan", marxan_iterations == 100000000, spf == 25) 
+ss <- rr %>% group_by(n_features, n_pu)
+
+pp <- function(x, title = "", y.var) {
+  #x.var <- enquo(x.var)
+  y.var <- enquo(y.var)
+  ggplot(x, 
+         aes(x = target, y = !! y.var, colour = as.factor(n_pu) , shape = as.factor(n_features), 
+             group = interaction(n_features, n_pu))) +
+    scale_colour_discrete(name  ="Planning units") +
+    scale_shape_discrete(name  ="Features") + 
+    geom_line() +
+    geom_point() + 
+    ggtitle(title) +
+    theme_bw()
+}
+
 ```
 
 # Conservation Letters
@@ -21,10 +62,51 @@ Richard Schuster, Jeffrey O. Hanson, Matt Strimas-Mackey, Joseph R. Bennett.
 
 
 
-#### Australia analysis
+#### Wos was i
+
+```{r, echo = FALSE, message = FALSE, results = "hide", fig.cap="Figure S1: plotting example"}
+pp(runs_complete %>% filter(solver == "gurobi"), "Gurobi", time)
+```
+
+
+```{r, echo = FALSE, message = FALSE, results = "hide"}
+                         
+pp(runs_complete %>% filter(solver == "rsymphony"), "SYMPHONY", time)
+```
 
 ```{r, echo = FALSE, message = FALSE, results = "hide"}
 
-library(rgdal)
-
+pp(rr, "Marxan", time)
 ```
+
+```{r, echo = FALSE, message = FALSE, results = "hide"}
+
+r2 <- runs_complete %>% filter(solver == "gurobi" | solver == "rsymphony" | (solver == "marxan" & marxan_iterations == 100000000 & spf == 25))
+r2 <- r2 %>% group_by(solver)
+
+r2 <- r2 %>% mutate(tt = (time - filter(r2, solver == 'gurobi')$time)/filter(r2, solver == 'gurobi')$time,
+                    cc = (cost - filter(r2, solver == 'gurobi')$cost)/filter(r2, solver == 'gurobi')$cost)
+
+pp(r2 %>% filter(solver == "rsymphony"), "SYMPHONY", tt)
+```
+
+```{r, echo = FALSE, message = FALSE, results = "hide"}
+pp(r2 %>% filter(solver == "marxan"), "Marxan", tt)
+```
+
+```{r, echo = FALSE, message = FALSE, results = "hide"}
+
+pp(r2 %>% filter(solver == "rsymphony"), "SYMPHONY", cc)
+```
+
+```{r, echo = FALSE, message = FALSE, results = "hide"}
+
+pp(r2 %>% filter(solver == "marxan"), "Marxan vs Gurobi; #iterations = 1E+08; SPF = 25", cc * 100)
+```
+
+```{r, echo = FALSE, message = FALSE, results = "hide"}
+
+pp(r2 %>% filter(solver == "marxan"), "Marxan", tt)
+```
+
+
