--- a/Supp mat.Rmd
+++ b/Supp mat.Rmd
@@ -1,8 +1,9 @@
 ---
 output:
   html_document: default
-  pdf_document: default
   word_document: default
+  pdf_document: 
+    fig_caption: yes
 ---
 
 ```{r setup, include=FALSE, echo = FALSE,}
@@ -71,56 +72,51 @@ rr_marxan_compl <- rr_marxan_compl %>% mutate(time_perc = (time - time_gur)/time
 
 ```
 
-# Conservation Letters
 
+Supporting Information for 
 
 #### Integer Linear programming outperforms simulated annealing for solving conservation planning problems 
 
 Richard Schuster, Jeffrey O. Hanson, Matt Strimas-Mackey, Joseph R. Bennett. 
 
 
-**Supplementary Information: **
-
-
-
-#### Wos was i
-
-```{r, echo = FALSE, message = FALSE, results = "hide", fig.cap="Figure S1: Cost savings Gurobi vs Marxan"}
+\newpage
+```{r, echo = FALSE, message = FALSE, results = "hide", fig.cap="**Figure S1**: Cost savings Gurobi vs Marxan"}
 pp(rr_marxan_compl %>% filter(solver == "marxan" & marxan_iterations > 1E+07 & spf > 1 & spf < 125), "Marxan vs Gurobi; #iterations > 100,000; SPF = 5 or 25", cost_perc)
 
 ```
-
+\newpage
 ```{r, echo = FALSE, message = FALSE, results = "hide", fig.cap="Figure S2: Cost profile for Gurobi solver."}
 pp(rr_marxan_compl %>% filter(solver == "gurobi"), "Gurobi", cost)
 ```
-
+\newpage
 ```{r, echo = FALSE, message = FALSE, results = "hide", fig.cap="Figure S3: Cost profile for SYMPHONY solver."}
 pp(rr_marxan_compl %>% filter(solver == "rsymphony"), "SYMPHONY", cost)
 ```
-
+\newpage
 ```{r, echo = FALSE, message = FALSE, results = "hide", fig.cap="Figure S4: Cost profile for Marxan using Simulated Annealing."}
 pp(rr_marxan_compl %>% filter(solver == "marxan") %>% group_by(target, n_features, n_pu) %>% 
      summarise(cost = mean(cost)), "Marxan", cost)
 ```
-
+\newpage
 ```{r, echo = FALSE, message = FALSE, results = "hide", fig.cap="Figure S5: Symphony vs Gurobi."}
 pp(rr_marxan_compl %>% filter(solver == "rsymphony"), "SYMPHONY", time_perc / 100)
 ```
-
+\newpage
 ```{r, echo = FALSE, message = FALSE, results = "hide", fig.cap="Figure S6: Marxan vs Gurobi."}
 pp(rr_marxan_compl %>% filter(solver == "marxan") %>% group_by(target, n_features, n_pu) %>% 
      summarise(time_perc = mean(time_perc)), "Marxan", time_perc / 100)
 ```
-
+\newpage
 
 ```{r, echo = FALSE, message = FALSE, results = "hide", fig.cap="Figure S7: Time profile for Gurobi solver."}
 pp(rr_marxan_compl %>% filter(solver == "gurobi"), "Gurobi", time)
 ```
-
+\newpage
 ```{r, echo = FALSE, message = FALSE, results = "hide", fig.cap="Figure S8: Time profile for Gurobi solver."}
 pp(rr_marxan_compl %>% filter(solver == "rsymphony"), "SYMPHONY", time)
 ```
-
+\newpage
 ```{r, echo = FALSE, message = FALSE, results = "hide", fig.cap="Figure S9: Time profile for Gurobi solver."}
 pp(rr_marxan_compl %>% filter(solver == "marxan") %>% group_by(target, n_features, n_pu) %>% 
      summarise(time = mean(time)), "Marxan", time)
