--- a/03 Supplementary material.Rmd
+++ b/03 Supplementary material.Rmd
@@ -1,13 +1,14 @@
 ---
-title: "a"
-output: 
+output:
   pdf_document:
     fig_caption: yes
-header-includes:
-- \usepackage{caption}
+  html_document:
+    df_print: paged
+header-includes: \usepackage{caption}
 ---
 
 \captionsetup[table]{labelformat=empty}
+
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
@@ -53,14 +54,16 @@ rl_filt <- rl_filt %>%
   )
 
 
-pp <- function(x, title = "", y.var) {
+pp <- function(x, title = "", y.var, xlab = "", ylab = "") {
   #x.var <- enquo(x.var)
   y.var <- enquo(y.var)
   ggplot(x, 
-         aes(x = target, y = !! y.var, colour = as.factor(n_pu) , shape = as.factor(n_features), 
+         aes(x = target * 100, y = !! y.var, colour = as.factor(n_pu) , shape = as.factor(n_features), 
              group = interaction(n_features, n_pu))) +
     scale_colour_discrete(name  ="Planning units") +
     scale_shape_discrete(name  ="Features") + 
+    xlab(xlab) + 
+    ylab(ylab) + 
     geom_line() +
     geom_point() + 
     ggtitle(title) +
@@ -82,59 +85,86 @@ Supporting Information for
 
 #### Integer Linear programming outperforms simulated annealing for solving conservation planning problems 
 
-Richard Schuster, Jeffrey O. Hanson, Matt Strimas-Mackey, Joseph R. Bennett. 
+Richard Schuster, Jeffrey O. Hanson, Matt Strimas-Mackey, Joseph R. Bennett 
 
 
 \newpage
-```{r pressure, echo=FALSE, fig.cap="Figure S3: Cost profile for SYMPHONY solver."}
-plot(pressure)
-```
-\newpage
-
+## Table S1
 ```{r TableS1, echo = FALSE, message = FALSE, results = "asis"}
 knitr::kable(spp[,-1], caption = "**Table S1**: List of species that were used as features in our analysis.")
 ```
 
 \newpage
+## Figure S1
+```{r FigS1, echo = FALSE}
+pp(rr_marxan_compl %>% filter(solver == "marxan" & marxan_iterations > 1E+07 & spf > 1 & spf < 125), "", cost_perc,
+   xlab = "Target [%]", ylab = "Cost increase using SA compared to ILP [%]")
+```
+**Figure S1**: Percent cost increase of SA solutions compared to ILP solutions, across targets, number of features and number of planning units. Simulated annealing (i.e. Marxan) parameters used are: number of iterations > 100,000; species penalty factor 5 or 25. 
 
-```{r FigS1, echo = FALSE, fig.cap = "**Figure S1**: Cost savings Gurobi vs Marxan"}
-pp(rr_marxan_compl %>% filter(solver == "marxan" & marxan_iterations > 1E+07 & spf > 1 & spf < 125), "Marxan vs Gurobi; #iterations > 100,000; SPF = 5 or 25", cost_perc)
+\newpage
+## Figure S2
+```{r FigS2, echo = FALSE}
+pp(rr_marxan_compl %>% filter(solver == "gurobi"), "", cost,
+   xlab = "Target [%]", ylab = "Solution cost [$]")
+```
+**Figure S2**: Cost profile for Gurobi solver across targets, number of features and number of planning units.
 
-```
 \newpage
-```{r, echo = FALSE, message = FALSE, results = "hide", fig.cap="Figure S2: Cost profile for Gurobi solver."}
-pp(rr_marxan_compl %>% filter(solver == "gurobi"), "Gurobi", cost)
+## Figure S3
+```{r FigS3, echo = FALSE}
+pp(rr_marxan_compl %>% filter(solver == "rsymphony"), "", cost,
+   xlab = "Target [%]", ylab = "Solution cost [$]")
 ```
+**Figure S3**: Cost profile for SYMPHONY solver across targets, number of features and number of planning units.
+
 \newpage
-```{r, echo = FALSE, message = FALSE, results = "hide", fig.cap="Figure S3: Cost profile for SYMPHONY solver."}
-pp(rr_marxan_compl %>% filter(solver == "rsymphony"), "SYMPHONY", cost)
-```
-\newpage
-```{r, echo = FALSE, message = FALSE, results = "hide", fig.cap="Figure S4: Cost profile for Marxan using Simulated Annealing."}
+## Figure S4
+```{r FigS4, echo = FALSE}
 pp(rr_marxan_compl %>% filter(solver == "marxan") %>% group_by(target, n_features, n_pu) %>% 
-     summarise(cost = mean(cost)), "Marxan", cost)
+     summarise(cost = mean(cost)), "", cost,
+   xlab = "Target [%]", ylab = "Solution cost [$]")
 ```
-\newpage
-```{r, echo = FALSE, message = FALSE, results = "hide", fig.cap="Figure S5: Symphony vs Gurobi."}
-pp(rr_marxan_compl %>% filter(solver == "rsymphony"), "SYMPHONY", time_perc / 100)
-```
-\newpage
-```{r, echo = FALSE, message = FALSE, results = "hide", fig.cap="Figure S6: Marxan vs Gurobi."}
-pp(rr_marxan_compl %>% filter(solver == "marxan") %>% group_by(target, n_features, n_pu) %>% 
-     summarise(time_perc = mean(time_perc)), "Marxan", time_perc / 100)
-```
-\newpage
+**Figure S4**: Cost profile for Marxan using Simulated Annealing across targets, number of features and number of planning units.
 
-```{r, echo = FALSE, message = FALSE, results = "hide", fig.cap="Figure S7: Time profile for Gurobi solver."}
-pp(rr_marxan_compl %>% filter(solver == "gurobi"), "Gurobi", time)
-```
 \newpage
-```{r, echo = FALSE, message = FALSE, results = "hide", fig.cap="Figure S8: Time profile for Gurobi solver."}
-pp(rr_marxan_compl %>% filter(solver == "rsymphony"), "SYMPHONY", time)
+## Figure S5
+```{r FigS5, echo = FALSE}
+pp(rr_marxan_compl %>% filter(solver == "rsymphony"), "", time_perc / 100,
+   xlab = "Target [%]", ylab = "Multiplier for SYMPHONY to baseline time of Gurobi")
 ```
-\newpage
-```{r, echo = FALSE, message = FALSE, results = "hide", fig.cap="Figure S9: Time profile for Gurobi solver."}
-pp(rr_marxan_compl %>% filter(solver == "marxan") %>% group_by(target, n_features, n_pu) %>% 
-     summarise(time = mean(time)), "Marxan", time)
-```
+**Figure S5**: Time to solution comparisons between SYMPHONY and Gurobi across targets, number of features and number of planning units.
 
+\newpage
+## Figure S6
+```{r FigS6, echo = FALSE}
+pp(rr_marxan_compl %>% filter(solver == "marxan") %>% group_by(target, n_features, n_pu) %>% 
+     summarise(time_perc = mean(time_perc)), "", time_perc / 100,
+   xlab = "Target [%]", ylab = "Multiplier for Marxan to baseline time of Gurobi")
+```
+**Figure S6**: Time to solution comparisons between Marxan using Simulated Annealing and Gurobi across targets, number of features and number of planning units.
+
+\newpage
+## Figure S7
+```{r FigS7, echo = FALSE}
+pp(rr_marxan_compl %>% filter(solver == "gurobi"), "", time,
+   xlab = "Target [%]", ylab = "Time to solution [seconds]")
+```
+**Figure S7**: Time to solution profile for Gurobi solver across targets, number of features and number of planning units.
+
+\newpage
+## Figure S8
+```{r FigS8, echo = FALSE}
+pp(rr_marxan_compl %>% filter(solver == "rsymphony"), "", time,
+   xlab = "Target [%]", ylab = "Time to solution [seconds]")
+```
+**Figure S8**: Time to solution profile for SYMPHONY solver across targets, number of features and number of planning units.
+
+\newpage
+## Figure S9
+```{r FigS9, echo = FALSE}
+pp(rr_marxan_compl %>% filter(solver == "marxan") %>% group_by(target, n_features, n_pu) %>% 
+     summarise(time = mean(time)), "", time,
+   xlab = "Target [%]", ylab = "Time to solution [seconds]")
+```
+**Figure S9**: Time to solution profile for Marxan using Simulated Annealing across targets, number of features and number of planning units.
