--- a/03 Supplementary material.Rmd
+++ b/03 Supplementary material.Rmd
@@ -1,10 +1,12 @@
 ---
 title: "a"
-output: 
+output:
   pdf_document:
     fig_caption: yes
-header-includes:
-- \usepackage{caption}
+  word_document: default
+  html_document:
+    df_print: paged
+header-includes: \usepackage{caption}
 ---
 
 \captionsetup[table]{labelformat=empty}
